# nomino

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  lint.yml  release.yml  test.yml
data/: opts-template.yml
src/: cli.rs  lib.rs  main.rs
src/errors/: format.rs  sort.rs  source.rs  strerr.rs
src/input/: context.rs  formatter.rs  iterator.rs  output.rs  provider.rs  separator.rs  source.rs  stream.rs
src/utils/: macros.rs
tests/: default_test.rs  map_test.rs  regex_test.rs  sort_test.rs
ttt/: m.json
