[package]
authors = ["Navid <yaa110@gmail.com>"]
categories = ["command-line-utilities"]
description = "Batch rename utility for developers"
edition = "2021"
homepage = "https://github.com/yaa110/nomino"
license = "MIT OR Apache-2.0"
name = "nomino"
readme = "README.md"
repository = "https://github.com/yaa110/nomino"
version = "1.3.3"

[dependencies]
anyhow = "1.0"
clap = {version = "4.4", features = ["derive"]}
colored = "2.0"
is-terminal = "0.4"
natord = "1.0"
prettytable-rs = "0.10"
regex = "1.10"
serde_json = "1.0"
walkdir = "2.4"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
panic = "abort"
strip = true
